--- a/app/src/main/res/xml/widget_anime_info.xml
+++ b/app/src/main/res/xml/widget_anime_info.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <appwidget-provider xmlns:android="http://schemas.android.com/apk/res/android"
     android:previewImage="@drawable/profile"
-    android:description="오늘 신작 보기"
+    android:description="@string/widget_description"
     android:minResizeWidth="50dp"
     android:minResizeHeight="50dp"
     android:resizeMode="horizontal|vertical"
