--- a/main/src/main/res/xml/widget_anime_info.xml
+++ b/main/src/main/res/xml/widget_anime_info.xml
@@ -5,5 +5,5 @@
     android:minResizeWidth="50dp"
     android:minResizeHeight="50dp"
     android:resizeMode="horizontal|vertical"
-    android:updatePeriodMillis="60000"
+    android:updatePeriodMillis="1800000"
     android:widgetCategory="home_screen" />
