:bug: setting widget ratio

--- a/main/src/main/res/xml-v34/widget_anime_info.xml
+++ b/main/src/main/res/xml-v34/widget_anime_info.xml
@@ -2,12 +2,8 @@
 <appwidget-provider xmlns:android="http://schemas.android.com/apk/res/android"
     android:previewImage="@drawable/profile"
     android:description="@string/widget_description"
-    android:minResizeWidth="276dp"
-    android:maxResizeWidth="276dp"
-    android:minWidth="276dp"
-    android:minHeight="338dp"
-    android:minResizeHeight="338dp"
-    android:maxResizeHeight="338dp"
+    android:targetCellWidth="4"
+    android:targetCellHeight="3"
     android:resizeMode="horizontal|vertical"
     android:updatePeriodMillis="3600000"
     android:widgetCategory="home_screen" />
