--- a/main/src/main/res/layout/widget_new_anime_info.xml
+++ b/main/src/main/res/layout/widget_new_anime_info.xml
@@ -2,51 +2,137 @@
     style="@style/Widget.Daily_anime_app.AppWidget.Container"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:theme="@style/Theme.Daily_anime_app.AppWidgetContainer">
+    android:theme="@style/Theme.Daily_anime_app.AppWidgetContainer"
+    android:background="@color/white">
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical">
-        <ImageView
-            android:id="@+id/animeImage"
-            style="@style/Widget.Daily_anime_app.AppWidget.InnerView"
-            android:layout_width="100dp"
-            android:layout_height="150dp"
-            android:layout_centerHorizontal="true"
-            android:layout_centerVertical="true"
-            android:layout_margin="8dp"
-            android:scaleType="fitCenter"
-            />
+        android:layout_height="220dp"
+        android:orientation="vertical"
+        >
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal">
-            <Button
+            android:orientation="horizontal"
+            >
+        <ImageView
+            android:id="@+id/animeImage"
+            style="@style/Widget.Daily_anime_app.AppWidget.InnerView"
+            android:layout_width="176dp"
+            android:layout_height="130dp"
+            android:layout_centerHorizontal="true"
+            android:layout_centerVertical="true"
+            android:layout_margin="8dp"
+            android:scaleType="center"
+            android:clipToOutline="true"
+            android:background="@drawable/round"
+            android:src="@drawable/profile"
+            />
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="vertical"
+                android:paddingTop="16dp"
+                android:paddingHorizontal="8dp"
+                >
+                <TextView
+                    android:id="@+id/dayOfAnime"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:textColor="@color/black"
+                    android:textSize="16sp"
+                    android:text="asaaf"
+                    />
+                <View
+                    android:layout_width="match_parent"
+                    android:layout_height="1dp"
+                    android:background="@color/black"
+                    />
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:textColor="@color/black"
+                    android:textSize="14sp"
+                    android:layout_marginTop="8dp"
+                    android:text="콘텐츠 등급"
+                    />
+                <TextView
+                    android:id="@+id/ratingOfAnime"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:textColor="@color/black"
+                    android:textSize="14sp"
+                    android:text="asaaf"
+                    />
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:textColor="@color/black"
+                    android:textSize="14sp"
+                    android:layout_marginTop="5dp"
+                    android:text="콘텐츠 등급"
+                    />
+                <TextView
+                    android:id="@+id/updateOfDay"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:textColor="@color/black"
+                    android:textSize="14sp"
+                    android:text="asaaf"
+                    />
+
+            </LinearLayout>
+        </LinearLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:layout_gravity="center"
+            android:paddingTop="16dp"
+            android:gravity="center"
+
+            >
+            <ImageButton
                 android:id="@+id/beforeButton"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="before"
+                android:src="@drawable/ic_arrow_back"
                 android:contextClickable="true"
+                android:background="@color/invisible"
+                android:layout_weight="1"
                 />
-            <Button
+
+            <TextView
+                android:layout_width="284dp"
+                android:layout_height="wrap_content"
+                android:id="@+id/animeName"
+                android:text="A랭크_파티를_이탈한_나는,_전_제자들과_미궁_심부를_목표로_한다."
+                android:textColor="@color/black"
+                android:textSize="20sp"
+                android:layout_marginStart="8dp"
+                android:layout_marginEnd="8dp"
+                android:textAlignment="center"
+                android:layout_gravity="center"
+                android:gravity="center"
+                android:layout_weight="2"
+                android:maxLines="1"
+                android:ellipsize="end"
+                android:autoSizeMaxTextSize="20sp"
+                android:autoSizeMinTextSize="11sp"
+                android:autoSizeTextType="uniform"
+                />
+
+            <ImageButton
                 android:id="@+id/nextButton"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="next"
+                android:src="@drawable/ic_arrow_next"
                 android:contextClickable="true"
                 android:clickable="true"
+                android:background="@color/invisible"
+                android:layout_weight="3"
                 />
 
         </LinearLayout>
 
-        <TextView
-            style="@style/Widget.Daily_anime_app.AppWidget.InnerView"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/animeName"
-            android:text=""
-            android:textColor="#000"
-            android:textSize="20sp"
-            />
     </LinearLayout>
 </RelativeLayout>
