--- a/main/src/main/res/layout/widget_new_anime_horizon_large.xml
+++ b/main/src/main/res/layout/widget_new_anime_horizon_large.xml
@@ -86,12 +86,10 @@
         </LinearLayout>
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:orientation="horizontal"
             android:layout_gravity="center"
-            android:paddingTop="16dp"
             android:gravity="center"
-
             >
             <ImageButton
                 android:id="@+id/beforeButton"
@@ -110,8 +108,7 @@
                 android:text="A랭크_파티를_이탈한_나는,_전_제자들과_미궁_심부를_목표로_한다."
                 android:textColor="@color/black"
                 android:textSize="20sp"
-                android:layout_marginStart="8dp"
-                android:layout_marginEnd="8dp"
+                android:layout_marginHorizontal="8dp"
                 android:textAlignment="center"
                 android:layout_gravity="center"
                 android:gravity="center"
