--- a/main/src/main/res/xml-v31/widget_new_anime_horizon.xml
+++ b/main/src/main/res/xml-v31/widget_new_anime_horizon.xml
@@ -1,14 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
 <appwidget-provider xmlns:android="http://schemas.android.com/apk/res/android"
     android:description="@string/widget_description"
-    android:initialKeyguardLayout="@layout/widget_new_anime_info"
-    android:initialLayout="@layout/widget_new_anime_info"
+    android:initialKeyguardLayout="@layout/widget_new_anime_horizon_large"
+    android:initialLayout="@layout/widget_new_anime_horizon_large"
     android:targetCellWidth="4"
     android:targetCellHeight="2"
     android:previewImage="@drawable/profile"
     android:resizeMode="horizontal|vertical"
     android:updatePeriodMillis="60000"
     android:widgetCategory="home_screen"
-    android:minResizeHeight="110dp"
-    android:minResizeWidth=""
     />
+<!--
+android:minResizeWidth="349dp"
+    android:maxResizeWidth="349dp"
+    android:minWidth="349dp"
+    android:minHeight="337dp"
+    android:minResizeHeight="337dp"
+    android:maxResizeHeight="337dp"
+-->
