--- a/main/src/main/res/values/colors.xml
+++ b/main/src/main/res/values/colors.xml
@@ -5,5 +5,6 @@
     <color name="light_blue_900">#FF01579B</color>
     <color name="white">#FFFFFFFF</color>
     <color name="black">#FF000000</color>
+    <color name="gray">#FFACACAC</color>
     <color name="invisible">#00000000</color>
 </resources>
