:sparkles: make refresh function

--- a/main/src/main/res/layout/widget_new_anime_horizon_large.xml
+++ b/main/src/main/res/layout/widget_new_anime_horizon_large.xml
@@ -58,7 +58,8 @@
                         android:scaleType="centerCrop"
                         android:tint="@color/gray"
                         android:src="@drawable/ic_refresh"
-                        android:backgroundTint="@color/invisible"
+                        android:background="@color/invisible"
+                        android:contextClickable="true"
                         />
                 </LinearLayout>
 
