:sparkles: Change the maximum and minimum size of the widget

--- a/main/src/main/res/xml-v35/widget_new_anime_vertical.xml
+++ b/main/src/main/res/xml-v35/widget_new_anime_vertical.xml
@@ -4,14 +4,14 @@
     android:initialKeyguardLayout="@layout/widget_new_anime_vertical_large"
     android:initialLayout="@layout/widget_new_anime_vertical_large"
     android:targetCellWidth="2"
-    android:targetCellHeight="3"
+    android:targetCellHeight="2"
     android:previewImage="@drawable/profile"
-    android:resizeMode="horizontal|vertical"
+    android:resizeMode="vertical"
     android:updatePeriodMillis="60000"
     android:widgetCategory="home_screen"
-    android:minResizeWidth="337dp"
-    android:minResizeHeight="57dp"
-    android:maxResizeWidth="455dp"
+    android:minResizeWidth="110dp"
+    android:maxResizeWidth="110dp"
+    android:minResizeHeight="111dp"
     android:maxResizeHeight="110dp"
     />
 <!--
